test/fail/id-property-wrongtype.app
//Id property must be a string type

application test

entity Test {

	nr :: Number(id)
	
}

define page root() { }
